--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="test1">
+		</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
